chimera_red/firmware/build_log.txt
Processing esp32-s3-devkitc-1 (platform: espressif32; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.12.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 37 compatible libraries
Scanning dependencies...
Dependency Graph
|-- SmartRC-CC1101-Driver-Lib @ 2.5.7
|-- TFT_eSPI @ 2.5.43
|-- Adafruit PN532 @ 1.3.4
|-- ESP32 BLE Arduino @ 2.0.0
|-- SPI @ 2.0.0
|-- WiFi @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-s3-devkitc-1\src\main.cpp.o
Archiving .pio\build\esp32-s3-devkitc-1\lib148\libSmartRC-CC1101-Driver-Lib.a
Archiving .pio\build\esp32-s3-devkitc-1\lib507\libFS.a
Archiving .pio\build\esp32-s3-devkitc-1\lib445\libSPIFFS.a
Archiving .pio\build\esp32-s3-devkitc-1\libff8\libLittleFS.a
In file included from src/main.cpp:11:
.pio/libdeps/esp32-s3-devkitc-1/TFT_eSPI/TFT_eSPI.h:973:8: warning: #warning >>>>------>> TOUCH_CS pin not defined, TFT_eSPI touch functions will not be available! [-Wcpp]
       #warning >>>>------>> TOUCH_CS pin not defined, TFT_eSPI touch functions will not be available!
        ^~~~~~~
Archiving .pio\build\esp32-s3-devkitc-1\lib98d\libTFT_eSPI.a
Archiving .pio\build\esp32-s3-devkitc-1\lib1a0\libWire.a
src/main.cpp: In function 'void processCommand(String)':
src/main.cpp:467:5: error: 'scanNFC' was not declared in this scope
     scanNFC();
     ^~~~~~~
src/main.cpp:467:5: note: suggested alternative: 'scanBLE'
     scanNFC();
     ^~~~~~~
     scanBLE
src/main.cpp:469:5: error: 'emulateNFC' was not declared in this scope
     emulateNFC();
     ^~~~~~~~~~
src/main.cpp: In function 'void initCC1101()':
src/main.cpp:546:20: error: 'class ELECHOUSE_CC1101' has no member named 'SetTxPower'; did you mean 'SetTx'?
   ELECHOUSE_cc1101.SetTxPower(10);         // 10dBm
                    ^~~~~~~~~~
                    SetTx
Archiving .pio\build\esp32-s3-devkitc-1\libfee\libAdafruit BusIO.a
*** [.pio\build\esp32-s3-devkitc-1\src\main.cpp.o] Error 1
========================== [FAILED] Took 3.73 seconds ==========================
